reset password view + roles

--- a/app/views/configurations/_menu.html.erb
+++ b/app/views/configurations/_menu.html.erb
@@ -5,7 +5,7 @@
 
 <!-- Single button -->
 <div class="form-group">
-  <% tertiaries = [:branch, :partner_type, :student_source, :application_status, :email_template] %>
+  <% tertiaries = [:role, :branch, :partner_type, :student_source, :application_status, :email_template] %>
     <div class="btn-group">
       <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">Enquiry<span class="caret"></span></button>
       <ul role="menu" class="dropdown-menu">
