--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -59,9 +59,7 @@
 </div>
 </div>
 <script type="text/javascript">
- actmm("configuration");
- actsm("role");
-
+ acttm("configurations");
 </script>
 
 
