--- a/app/views/roles/_permissions.html.erb
+++ b/app/views/roles/_permissions.html.erb
@@ -36,7 +36,7 @@
      <table  class="tables3 more_permissions" border="0" cellpadding="0" cellspacing="0" width="100%"  style="display:none;">
                <tr>
                <td></td>
-               <% ["Create","Read","Update","Delete"].each do |i| %>
+               <% ["Create","Read","Update","Delete","List"].each do |i| %>
                <td><%= check_box_tag "permissions_col",
                                          nil,
                                          nil,
