--- a/app/views/handle/cancan.html.erb
+++ b/app/views/handle/cancan.html.erb
@@ -1,20 +1,8 @@
-<script type="text/javascript">
-$(function(){
 
-  showPopUp('cancan_error');
-
-});
-
-</script>
-
-<div id="cancan_error" class="addNewPop box-theme-ch theme-ls" style="display: block; top: 483px; left: 455px;"> 
+<div class="row">
+  <div class="text-center">
   <h2><%= flash[:notice] %></h2>
-  <br/>
-  <h4>Goto? </h4>
-
-  <%= link_to "Enquiries", enquiries_path %> | 
-  <%= link_to "Registraions", registrations_path %> | 
-   <%= link_to "Tasks", tasks_path %> | 
-  <%= link_to "My Account", current_user %></br>
-  
+  </div>
 </div>
+<br/>
+<br/>
