[doc_as_image] registration document to profile image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,7 @@
 *= require jqueryui-datepicker
 *= require smartmenus
 *= require smartmenus_custom
+*= require jcrop-min
 */
 
 /* states and images */
